# tracemind

./: .env.example  .gitignore  AGENTS.md  QUERY_SSL_USB_EXTENSION_PLAN.md  README.md  conftest.py  plan.md  pyproject.toml
.agents/rules/: design.md
.codex/: config.toml
.codex/skills/: THIRD_PARTY_NOTICES.md
.github/: copilot-instructions.md
.github/instructions/: architecture.instructions.md
agent/: .env.example  AGENTS.md  README.md  REFACTOR_ROADMAP.md
agent/conf/: config.yaml
agent/data/: scored_events.db
agent/src/: __init__.py
apps/: AGENTS.md
apps/experiment_dashboard/: AGENTS.md  README.md  index.html
apps/experiment_web/: AGENTS.md  README.md  index.html  package-lock.json  package.json
apps/family_extension/: AGENTS.md  README.md  collector-debug.html  collector-fixture.html  index.html  package-lock.json  package.json  parent.html  popup.html  vite.config.ts
conf/: AGENTS.md  README.md  __init__.py
conf/dataset/: __init__.py  cssrs.yaml
conf/embedding/: mxbai.yaml
conf/entrypoints/: __init__.py
conf/execution_context/: __init__.py
conf/federated_shard_policy/: label_dominant.yaml
conf/jobs/: __init__.py
conf/prototype_builder/: kmeans.yaml  single.yaml
conf/pseudo_label_algorithm/: __init__.py
conf/query_adaptation_initial_checkpoint/: none.yaml  required.yaml
conf/query_source/: __init__.py  dataset_default.yaml
conf/run_controls/: __init__.py
conf/runtime/: __init__.py  cpu_local.yaml  gpu_online.yaml
data/: README.md
docs/: AGENTS.md  README.md  ai_context_manifest.yaml  ai_harness_eval_cases.yaml  ai_harness_operating_model.md  execution_index.md  experiment_results.md  family_extension_wellbeing_signal_mvp_plan.md  fl_runtime_implementation_checklist.md  project_execution_plan.md  staged_execution_roadmap.md  strategy_surface_map.md  temp.md  web_experiment_workspace_plan.md
main-server/: README.md
main_server/: AGENTS.md  README.md
methods/: AGENTS.md  README.md  __init__.py
research/: README.md
scripts/: AGENTS.md  README.md  __init__.py  activate_prototype_pack.py  classification_report.py  download_dataset.py  evaluate_prototype_pack.py  generate_experiment_web_types.py  generate_family_extension_types.py  labeled_query_rows.py  prototype_pack_builder.py  pull_prototype_pack.py  query_buffer_selection_diagnostics.py  report_prototype_distances.py  run_dataset_pipeline.py  seed_prototypes.py  split_labeled_query_set.py  train_softmax_classifier.py  update_prototype_build_state.py
shared/: AGENTS.md  README.md
tests/: AGENTS.md
tmp_test_rounds/: active.json
tracemind_embedding/: __init__.py  base.py  factory.py
tracemind_runtime/: __init__.py  device.py
(+2682 files in other folders)
