[project]
name = "tracemind-server"
version = "0.1.0"
description = "프라이버시 보존 기반 아동·청소년 온라인 위험 변화 감지 시스템"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "datasets>=2.19.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests", "agent/tests", "shared/tests"]
markers = [
    "slow: 실행 시간이 긴 테스트",
    "gpu: GPU가 필요한 테스트",
]
