[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracemind"
version = "0.1.0"
description = "프라이버시 보존 기반 아동·청소년 온라인 위험 변화 감지 시스템"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "safetensors>=0.7.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "datasets>=2.19.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
experiments = [
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "peft>=0.15.0",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.7",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent",
    "agent.src",
    "agent.src.*",
    "conf",
    "conf.*",
    "main_server",
    "main_server.src",
    "main_server.src.*",
    "methods",
    "methods.*",
    "shared",
    "shared.src",
    "shared.src.*",
    "scripts",
    "scripts.*",
]
namespaces = true

[tool.setuptools.package-data]
conf = ["**/*.yaml", "**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests", "agent/tests", "main_server/tests", "shared/tests"]
markers = [
    "slow: 실행 시간이 긴 테스트",
    "gpu: GPU가 필요한 테스트",
    "integration: 실제 서버 프로세스가 필요한 E2E 통합 테스트",
]
